--- a/categoryProducts.html
+++ b/categoryProducts.html
@@ -396,7 +396,7 @@ async function runDeliveryCalc(){
 `🚚 Delivery ₹${data.totalDelivery}
 (Retailer Pays ₹${data.retailerPays}, ${data.retailerPercent}%)
 ⏱️ ${data.timeMinutes} min
-📍 ${data.distanceKm} km`;
+📍 टोटल  आने  जाने  का  = ${data.distanceKm} km`;
 
     const total =
       Number(selectedProduct.price) + Number(data.retailerPays);
