--- a/wholesaler.html
+++ b/wholesaler.html
@@ -200,7 +200,22 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
     <button onclick="closeAll()">Cancel</button>
   </div>
 </div>
- 
+ <div class="modal" id="chargeInfoModal">
+  <div class="modal-content" style="max-width:400px; padding:20px; border-radius:12px; background:#000; color:#fff;">
+    <h3 style="margin-top:0; text-align:center;">Delivery Charge Info</h3>
+    <ul id="chargeList" style="list-style:none; padding:0; margin:10px 0;"></ul>
+    <button onclick="closeChargeModal()" style="
+      display:block;
+      margin:10px auto 0 auto;
+      padding:8px 16px;
+      border:none;
+      border-radius:8px;
+      background:#fff;
+      color:#000;
+      cursor:pointer;
+    ">Close</button>
+  </div>
+ </div>
  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>  <script>    
 const API="https://shopbacked-vmhs.onrender.com";    
 const TOKEN=localStorage.getItem("token");    
@@ -654,7 +669,40 @@ async function openEditProduct(id) {
     loadProducts();
   }
  }
- 
+ function showChargeInfo(orderAmount = 0) {
+  const slabs = [
+    {min:100, max:500, percent:30},
+    {min:501, max:3000, percent:50},
+    {min:3001, max:5000, percent:70},
+    {min:5001, max:Infinity, percent:100} // Free delivery
+  ];
+
+  const list = document.getElementById("chargeList");
+  list.innerHTML = "";
+
+  slabs.forEach(slab => {
+    const li = document.createElement("li");
+
+    if(slab.percent === 0){
+      li.innerText = `₹${slab.min}+ का order → डिलीवरी चार्ज पे होलसेलर  ✅`;
+    } else {
+      li.innerText = `₹${slab.min} - ${slab.max} का order → ${slab.percent}% delivery charge`;
+    }
+
+    // Highlight slab based on current order amount
+    if(orderAmount >= slab.min && orderAmount <= slab.max){
+      li.classList.add("highlight");
+    }
+
+    list.appendChild(li);
+  });
+
+  document.getElementById("chargeInfoModal").style.display = "flex";
+}
+
+function closeChargeModal() {
+  document.getElementById("chargeInfoModal").style.display = "none";
+     }
  
                     /* CONFIRM ORDER WITH VEHICLE TYPE */
 async function confirmOrder(id){
