--- a/wholesaler.html
+++ b/wholesaler.html
@@ -113,7 +113,25 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
     <button class="icon-btn" onclick="openProfile()"><i class="bi bi-shop"></i></button>    
     <button class="icon-btn" onclick="openProduct()"><i class="bi bi-plus"></i></button>    
     <button class="icon-btn" onclick="openOrders()"><i class="bi bi-bag-check"></i></button>    
-  </div>    <div class="header">    
+  </div>  <div   
+    onclick="showChargeInfo(0)"   
+    style="  
+      background:#2563eb;   /* Blue color */
+      color:#fff;   
+      text-align:center;   
+      padding:8px 12px;   
+      border-radius:8px;   
+      font-weight:600;   
+      cursor:pointer;  
+      margin-bottom:10px;  
+      max-width:400px;  
+      margin-left:auto;  
+      margin-right:auto;  
+      box-shadow:0 4px 8px rgba(0,0,0,0.1);  
+      font-size:14px;  
+    ">  
+    ऑर्डर वैल्यू के अनुसार होलसेलर डिलीवरी चार्ज  
+  </div>  <div class="header">    
     <h3>Wholesaler Dashboard</h3>    
     <small>ID: <b id="widText"></b></small>    
   </div>    <div id="categories" class="category-grid"></div>    
