--- a/categoryProducts.html
+++ b/categoryProducts.html
@@ -216,7 +216,55 @@ renderProducts(allProducts);
     console.error(e);
   }
 }
+function renderProducts(list){
+  const container = document.getElementById("products");
 
+  if(!list.length){
+    container.innerHTML = "<p>No products found</p>";
+    return;
+  }
+
+  container.innerHTML = list.map(p=>{
+    const pdata = encodeURIComponent(JSON.stringify(p));
+    return `
+      <div class="product-card">
+        <img src="${p.images?.[0]||''}">
+        <div>${p.productName}</div>
+        <div class="price">₹${p.price}</div>
+        <div class="actions">
+          <button class="cart-btn"
+            onclick='addToCart(JSON.parse(decodeURIComponent("${pdata}")))'>🛒</button>
+          <button class="buy-btn"
+            onclick='openDetail(JSON.parse(decodeURIComponent("${pdata}")))'>⚡</button>
+        </div>
+      </div>
+    `;
+  }).join("");
+}
+
+  function toggleSearch(){
+  const box = document.getElementById("searchBox");
+  const input = document.getElementById("searchInput");
+
+  if(box.style.display === "none"){
+    box.style.display = "block";
+    input.focus();
+  }else{
+    box.style.display = "none";
+    input.value = "";
+    renderProducts(allProducts); // reset
+  }
+}
+
+function filterProducts(){
+  const q = document.getElementById("searchInput").value.toLowerCase();
+
+  const filtered = allProducts.filter(p =>
+    p.productName.toLowerCase().includes(q)
+  );
+
+  renderProducts(filtered);
+}
 // ---------------- DETAIL ----------------
 let selectedProduct = null;
 
