--- a/category.html
+++ b/category.html
@@ -164,8 +164,32 @@ button.delete{
 <body>
 
 <div class="main">
-  <div class="header">
-    <h3 id="catTitle">Category</h3>
+  <div class="header" style="position:relative">
+  <h3 id="catTitle">Category</h3>
+
+  <!-- 🔍 Search Icon -->
+  <i class="bi bi-search"
+     onclick="toggleSearch()"
+     style="position:absolute;right:16px;top:18px;font-size:18px;cursor:pointer;color:#2563eb">
+  </i>
+
+  <!-- 🔎 Search Box -->
+  <input id="searchBox"
+         type="text"
+         placeholder="Search product..."
+         onkeyup="searchProduct(this.value)"
+         style="
+           display:none;
+           margin-top:10px;
+           width:100%;
+           padding:8px 12px;
+           border-radius:10px;
+           border:1px solid #cbd5e1;
+           font-size:13px;
+         ">
+
+  <button class="back-btn" onclick="goBack()">⬅ Back</button>
+</div>
     <button class="back-btn" onclick="goBack()">⬅ Back</button>
   </div>
 
