--- a/category.html
+++ b/category.html
@@ -242,7 +242,7 @@ const d_dots = document.getElementById("d_dots");
 const d_price = document.getElementById("d_price");
 const d_detail = document.getElementById("d_detail");
 let editProductId = null;
-
+let allCategoryProducts = [];
 function goBack(){ window.history.back(); }
 function closeAll(){ document.querySelectorAll(".modal").forEach(m=>m.style.display="none"); }
 
