--- a/retailer.html
+++ b/retailer.html
@@ -596,7 +596,7 @@ const orderStatusData = document.getElementById("orderStatusData");
 const deliveryModal = document.getElementById("deliveryModal");
 const deliveryData = document.getElementById("deliveryData");
 const deliveryDot = document.getElementById("deliveryDot");
-
+const profileLocation = document.getElementById("profileLocation");
 // Utility
 function formatDT(d){ const dt=new Date(d); return dt.toLocaleDateString()+" "+dt.toLocaleTimeString(); }
 
