--- a/retailer.html
+++ b/retailer.html
@@ -571,7 +571,8 @@ const API = "https://shopbacked-vmhs.onrender.com";
 
 let selectedProduct = null;
 let cart = [];
-
+let cartDeliveryCharge = 0;
+let cartTimer = null;
 // DOM elements
 const dImages = document.getElementById("dImages");
 const dDots   = document.getElementById("dDots");
